--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ad-visor"
-version = "0.1.8"
+version = "0.1.9"
 description = "Ad-VISOR (Advanced Visual Scattering Toolkit for Reciprocal-space)"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -32,6 +32,7 @@ Documentation = "https://ad-visor.readthedocs.io/en/latest/"
 
 [project.scripts]
 ad-visor = "advisor.app:main"
+advisor = "advisor.app:main"
 
 [tool.setuptools]
 include-package-data = true
